Bug 1583005 - Ensure the fontconfig configuration is initialized in all processes (by calling FcConfigGetCurrent) before potential gtk access. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D46732